simplify code. reduce redundancy. use JTS for point in polygon.